test/users/lydia/fieldNumToNameError.good
fieldNumToNameError.chpl:7: error: '3' is not a valid field number for R
