test/users/lydia/fieldNumToNameError.chpl
record R {
  var a: int;
  var b: string;
  var c: real;
}

writeln(__primitive("field num to name", R, 4));
